💄 style(web): use primary color variable

--- a/apps/web/src/layout/BaseLayout/BaseLayout.astro
+++ b/apps/web/src/layout/BaseLayout/BaseLayout.astro
@@ -39,7 +39,7 @@ if (featuredImage?.mediaDetails) {
 <!doctype html>
 <html
   lang="fr"
-  class="scrollbar scrollbar-thumb-frustration-yellow scrollbar-track-black bg-black"
+  class="scrollbar scrollbar-thumb-primary scrollbar-track-black bg-black"
 >
   <Head
     title={title}
