--- a/apps/web/src/layout/BaseLayout/Footer/components/MoreLinks.astro
+++ b/apps/web/src/layout/BaseLayout/Footer/components/MoreLinks.astro
@@ -27,7 +27,7 @@ const MORE_LINKS = [
 
 <ul
   class={cn(
-    "flex items-center justify-center text-center leading-none font-bakbak bg-black text-frustration-yellow px-8",
+    "flex items-center justify-center text-center leading-none font-bakbak bg-black text-primary px-8",
     "py-2 gap-2 flex-col",
     "sm:flex-row sm:gap-4",
     "lg:py-2 lg:text-lg",
@@ -43,7 +43,7 @@ const MORE_LINKS = [
             "text-sm",
             "sm:text-base",
             "md:text-lg",
-            "before:bg-frustration-yellow before:absolute before:bottom-0 before:left-1/2 before:block before:h-[2px] before:w-0 before:translate-x-[-50%] before:transition-all before:content-[''] hover:before:w-full",
+            "before:bg-primary before:absolute before:bottom-0 before:left-1/2 before:block before:h-[2px] before:w-0 before:translate-x-[-50%] before:transition-all before:content-[''] hover:before:w-full",
           )}
         >
           {name}
