--- a/apps/web/src/layout/BaseLayout/Header/Header.astro
+++ b/apps/web/src/layout/BaseLayout/Header/Header.astro
@@ -14,7 +14,7 @@ const categories = await fetchCategories();
 
 <header
   class={cn(
-    "flex justify-between bg-black text-frustration-yellow sticky top-0 z-20 @container",
+    "flex justify-between bg-black text-primary sticky top-0 z-20 @container",
     "p-1.5",
     "xs:p-2",
     "lg:px-4 lg:py-3",
