--- a/apps/web/src/layout/PostLayout/components/ScrollWatcher.astro
+++ b/apps/web/src/layout/PostLayout/components/ScrollWatcher.astro
@@ -1,4 +1,4 @@
-<div class="scroll-watcher bg-frustration-yellow sticky top-0 h-[2vw] max-h-[15px] w-0"></div>
+<div class="scroll-watcher bg-primary sticky top-0 h-[2vw] max-h-[15px] w-0"></div>
 <script>
   // 🚧 Dynamically adjust scroll watcher position
   function adjustScrollWatcherPosition() {
