--- a/apps/web/src/pages/_components/MainSlider/MainSlider.astro
+++ b/apps/web/src/pages/_components/MainSlider/MainSlider.astro
@@ -12,7 +12,7 @@ const { posts } = Astro.props;
     </ul>
   </div>
   <div class="splide__progress absolute bottom-0 w-full">
-    <div class="splide__progress__bar h-3! bg-frustration-yellow!"></div>
+    <div class="splide__progress__bar h-3! bg-primary!"></div>
   </div>
 </div>
 <script>
