--- a/apps/web/src/pages/contact/index.astro
+++ b/apps/web/src/pages/contact/index.astro
@@ -155,7 +155,7 @@ export const prerender = false;
       </div>
       <Button
         type="submit"
-        className="font-bakbak hover:text-frustration-yellow text-frustration-yellow mx-auto w-fit bg-black px-8 py-6 text-xl hover:bg-black"
+        className="font-bakbak hover:text-primary text-primary mx-auto w-fit bg-black px-8 py-6 text-xl hover:bg-black"
         >Envoyer</Button
       >
     </form>
