--- a/apps/web/src/pages/quiz/bourgeois-test/index.astro
+++ b/apps/web/src/pages/quiz/bourgeois-test/index.astro
@@ -121,8 +121,8 @@ const coverImage = "https://frustrationmagazine.fr/covers/test_bourgeois.webp";
     <div class="mt-12! mx-auto w-fit">
       <Button
         className={cn(
-          "transition-opacity! font-bakbak text-frustration-yellow rounded-md bg-black p-8 text-2xl",
-          "hover:text-frustration-yellow hover:bg-black hover:opacity-80",
+          "transition-opacity! font-bakbak text-primary rounded-md bg-black p-8 text-2xl",
+          "hover:text-primary hover:bg-black hover:opacity-80",
         )}
         disabled
         data-button="compute-points"
