--- a/apps/web/src/layout/BaseLayout/Footer/components/Newsletter.astro
+++ b/apps/web/src/layout/BaseLayout/Footer/components/Newsletter.astro
@@ -29,7 +29,7 @@ import H5 from "./H5.astro";
     <button
       type="submit"
       class={cn(
-        "bg-black py-2 font-open-sans justify-center font-bold text-frustration-yellow flex items-center gap-2",
+        "bg-black py-2 font-open-sans justify-center font-bold text-primary flex items-center gap-2",
         "text-base",
         "md:text-lg",
       )}
