--- a/apps/web/src/layout/BaseLayout/Header/banners/Banner.astro
+++ b/apps/web/src/layout/BaseLayout/Header/banners/Banner.astro
@@ -98,18 +98,14 @@ try {
             abonnés !
           </span>
           <span class={cn("font-bakbak text-2xl shadow-2xl", "text-xl", "sm:text-2xl")}>
-            <span class="to-frustration-yellow bg-gradient-to-r from-yellow-400 bg-clip-text text-transparent">
-              Déjà
-            </span>
+            <span class="to-primary bg-gradient-to-r from-yellow-400 bg-clip-text text-transparent">Déjà</span>
             <NumberTicker
               client:load
               startValue={subscribersLastMonth - 40}
-              className="text-frustration-yellow"
+              className="text-primary"
               value={subscribersLastMonth}
             />
-            <span class="from-frustration-yellow bg-gradient-to-r to-yellow-400 bg-clip-text text-transparent">
-              abonnés !
-            </span>
+            <span class="from-primary bg-gradient-to-r to-yellow-400 bg-clip-text text-transparent">abonnés !</span>
           </span>
         </div>
         {/* Gauge */}
