--- a/apps/web/src/pages/_components/AllArticles.astro
+++ b/apps/web/src/pages/_components/AllArticles.astro
@@ -14,7 +14,7 @@ const { category = "", label } = Astro.props;
 >
   <span
     class={cn(
-      "relative m-1.5 block rounded-[13px] bg-black px-10 pb-3 pt-4 font-bebas  uppercase text-frustration-yellow ",
+      "relative m-1.5 block rounded-[13px] bg-black px-10 pb-3 pt-4 font-bebas  uppercase text-primary ",
       "text-4xl",
       "md:text-5xl",
     )}
