--- a/apps/web/src/pages/_components/MainSlider/ArrowButtons.astro
+++ b/apps/web/src/pages/_components/MainSlider/ArrowButtons.astro
@@ -6,7 +6,7 @@ import { cn } from "@/lib/utils";
 <div
   class={cn(
     "splide__arrows",
-    "[&>button>svg]:fill-frustration-yellow! [&>button]:top-[90%]! [&>button]:size-[70px]!",
+    "[&>button>svg]:fill-primary! [&>button]:top-[90%]! [&>button]:size-[70px]!",
     "lg:[&>button]:top-[92%]! lg:[&>button]:size-[90px]! lg:[&>button>svg]:h-[50px]! lg:[&>button>svg]:w-[30px]! ",
     "xl:[&>button]:top-[50%]!",
   )}
