--- a/apps/web/src/pages/_components/MainSlider/H3.astro
+++ b/apps/web/src/pages/_components/MainSlider/H3.astro
@@ -1,5 +1,5 @@
 <h3
-  class="font-bakbak text-frustration-yellow mb-4 text-balance bg-black px-10 py-4 text-center text-4xl font-bold md:text-5xl lg:text-7xl xl:text-8xl"
+  class="font-bakbak text-primary mb-4 text-balance bg-black px-10 py-4 text-center text-4xl font-bold md:text-5xl lg:text-7xl xl:text-8xl"
 >
   <slot />
 </h3>
