--- a/apps/web/src/pages/quiz/bourgeois-test/index.astro
+++ b/apps/web/src/pages/quiz/bourgeois-test/index.astro
@@ -7,6 +7,7 @@ import { cn } from "@/lib/utils";
 import { Image } from "astro:assets";
 import CoverImage from "./_assets/_cover.webp";
 import { BAREMES, QUESTIONS } from "./_bourgeois-test";
+import { OG_IMAGES_URL } from "@/constants";
 
 function shuffleArray<T>(array: T[]): T[] {
   for (let i = array.length - 1; i > 0; i--) {
@@ -15,12 +16,13 @@ function shuffleArray<T>(array: T[]): T[] {
   }
   return array;
 }
-const coverImage = "https://frustrationmagazine.fr/covers/test_bourgeois.webp";
+
+const ogImageUrl = `${OG_IMAGES_URL}test_bourgeois.webp`;
 ---
 
 <PageLayout
   title="Quiz | Êtes-vous un bourgeois ?"
-  coverImage={coverImage}
+  ogImageUrl={ogImageUrl}
 >
   <article
     slot="content"
