--- a/apps/web/src/pages/evenements/index.astro
+++ b/apps/web/src/pages/evenements/index.astro
@@ -5,7 +5,7 @@ import H2 from "@/components/H2";
 import H3 from "@/components/H3";
 import { readRecords } from "data-access/prisma";
 import { type Event } from "./_models";
-import VousNeDetestez from "./_assets/vous_ne_detestez_pas_le_lundi_compressed.webp";
+import SaintLuigi from "./_assets/saint_luigi.webp";
 import { Image } from "astro:assets";
 import { OG_IMAGES_URL } from "@/constants";
 
@@ -43,11 +43,10 @@ const displayedEvents = events.filter(({ date, displayEvent }) => displayEvent &
                 <div class="absolute z-10 opacity-5" />
                 <CardEvent {event}>
                   <Image
-                    src={VousNeDetestez}
-                    alt="Couverture de Vous ne détestez pas le lundi, vous détestez la domination au travail de Nicolas Framont"
+                    src={SaintLuigi}
+                    alt={`Couverture de "Saint Luigi" de Nicolas Framont`}
                     width="200"
                     height="500"
-                    class="h-full w-auto"
                   />
                 </CardEvent>
                 {index > 0 && (
