--- a/apps/web/src/layout/BaseLayout/Header/Header.astro
+++ b/apps/web/src/layout/BaseLayout/Header/Header.astro
@@ -1,25 +1,19 @@
 ---
 import { Image } from "astro:assets";
 import frustrationLogo from "./frustration-logo.webp";
+
+import { Calendar, Mail, User } from "lucide-react";
 import Banner from "./banners/Banner.astro";
 import SearchOverlay from "./components/SearchOverlay";
 import CategoriesOverlay from "./components/CategoriesOverlay";
 
 import { cn } from "@/lib/utils";
-
 import { fetchCategories } from "@/lib/wordpress";
 
 const categories = await fetchCategories();
 ---
 
-<header
-  class={cn(
-    "flex justify-between bg-black text-primary sticky top-0 z-20 @container",
-    "p-2",
-    "xs:p-2.5",
-    "lg:px-4 lg:py-3",
-  )}
->
+<header class={cn("flex justify-between bg-black text-primary sticky top-0 z-20 @container", "px-4 py-3", "xs:p-4")}>
   <a
     aria-label="Page d'accueil"
     title="Page d'accueil"
@@ -32,8 +26,40 @@ const categories = await fetchCategories();
       alt="Logo de Frustration"
     />
   </a>
-  <div class={cn("flex", "gap-2", "md:gap-3", "xl:gap-4")}>
+  <div class={cn("flex", "gap-4", "md:gap-5")}>
     <SearchOverlay client:load />
+
+    <a
+      href="/contact"
+      type="button"
+      title="Nous contacter"
+      class={cn("w-4 cursor-pointer", "md:w-5", "xl:w-6")}
+      aria-label="Nous contacter"
+    >
+      <Mail size="100%" />
+    </a>
+
+    <a
+      href="/evenements"
+      type="button"
+      title="Voir nos événements"
+      class={cn("w-4 cursor-pointer", "md:w-5", "xl:w-6")}
+      aria-label="Voir nos événements"
+    >
+      <Calendar size="100%" />
+    </a>
+
+    <a
+      href={import.meta.env.STRIPE_PORTAL_CLIENT}
+      target="_blank"
+      type="button"
+      title="Portail abonnés"
+      class={cn("w-4 cursor-pointer", "md:w-5", "xl:w-6")}
+      aria-label="Portail abonnés"
+    >
+      <User size="100%" />
+    </a>
+
     <CategoriesOverlay
       categories={categories}
       portalUrl={import.meta.env.STRIPE_PORTAL_CLIENT}
