--- a/apps/web/src/layout/BaseLayout/Header/Header.astro
+++ b/apps/web/src/layout/BaseLayout/Header/Header.astro
@@ -4,8 +4,8 @@ import frustrationLogo from "./frustration-logo.webp";
 
 import { Calendar, Mail, User } from "lucide-react";
 import Banner from "./banners/Banner.astro";
-import SearchOverlay from "./components/SearchOverlay";
-import CategoriesOverlay from "./components/CategoriesOverlay";
+import { SearchOverlay } from "./components/SearchOverlay";
+import { CategoriesOverlay } from "./components/CategoriesOverlay";
 
 import { cn } from "@/lib/utils";
 import { fetchCategories } from "@/lib/wordpress";
