--- a/apps/web/src/layout/BaseLayout/BaseLayout.astro
+++ b/apps/web/src/layout/BaseLayout/BaseLayout.astro
@@ -39,7 +39,7 @@ if (featuredImage?.mediaDetails) {
 <!doctype html>
 <html
   lang="fr"
-  class="scrollbar scrollbar-thumb-primary scrollbar-track-black bg-black"
+  class="scrollbar scrollbar-thumb-primary scrollbar-track-black"
 >
   <Head
     title={title}
@@ -51,7 +51,7 @@ if (featuredImage?.mediaDetails) {
     {...mimeType ? { mimeType } : null}
   />
   <title>Frustration Magazine - {title}</title>
-  <body class="flex min-h-screen flex-col bg-white">
+  <body class="flex min-h-screen flex-col overflow-x-hidden bg-black">
     <Header transition:persist />
     <main class="flex grow flex-col">
       <slot transition:animate={fade({ duration: "0.4s" })} />
