--- a/apps/web/src/layout/BaseLayout/Header/Header.astro
+++ b/apps/web/src/layout/BaseLayout/Header/Header.astro
@@ -5,7 +5,7 @@ import frustrationLogo from "./frustration-logo.webp";
 import { Calendar, Mail, User } from "lucide-react";
 import Banner from "./banners/Banner.astro";
 import { SearchOverlay } from "./components/SearchOverlay";
-import { CategoriesOverlay } from "./components/CategoriesOverlay";
+import { MenuOverlay } from "./components/MenuOverlay";
 
 import { cn } from "@/lib/utils";
 import { fetchCategories } from "@/lib/wordpress";
@@ -13,7 +13,7 @@ import { fetchCategories } from "@/lib/wordpress";
 const categories = await fetchCategories();
 ---
 
-<header class={cn("flex justify-between bg-black text-primary sticky top-0 z-20 @container", "px-4 py-3", "xs:p-4")}>
+<header class={cn("flex justify-between bg-black/90 text-primary sticky top-0 z-20 @container", "px-4 py-3", "xs:p-4")}>
   <a
     aria-label="Page d'accueil"
     title="Page d'accueil"
@@ -60,7 +60,7 @@ const categories = await fetchCategories();
       <User size="100%" />
     </a>
 
-    <CategoriesOverlay
+    <MenuOverlay
       categories={categories}
       portalUrl={import.meta.env.STRIPE_PORTAL_CLIENT}
       client:load
