--- a/apps/web/src/pages/_components/Videos/Videos.astro
+++ b/apps/web/src/pages/_components/Videos/Videos.astro
@@ -135,7 +135,7 @@ const { data: records }: { data: any[] } = await readRecords({
         </div>
       </div>
       <AllArticles
-        category="videos"
+        category="video"
         label="Toutes les vidéos"
       />
     </Section>
