--- a/apps/web/src/pages/_components/MainSlider/ArrowButtons.astro
+++ b/apps/web/src/pages/_components/MainSlider/ArrowButtons.astro
@@ -11,10 +11,10 @@ import { cn } from "@/lib/utils";
     "xl:[&>button]:top-[50%]!",
   )}
 >
-  <button class="splide__arrow splide__arrow--prev left-12! bg-black! opacity-100!">
+  <button class="splide__arrow splide__arrow--prev left-12! bg-black/90! opacity-100! shadow-xl shadow-black/50">
     <Fragment set:html={ArrowButtonIcon} />
   </button>
-  <button class="splide__arrow splide__arrow--next right-12! bg-black! opacity-100!">
+  <button class="splide__arrow splide__arrow--next right-12! bg-black/90! opacity-100! shadow-xl shadow-black/50">
     <Fragment set:html={ArrowButtonIcon} />
   </button>
 </div>
